+Friends e alteracoes no StartGame

--- a/NewApp/app/src/main/AndroidManifest.xml
+++ b/NewApp/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".Register" />
         <activity android:name=".Ranking" />
         <activity android:name=".MainMenu" />
-        <activity android:name=".StartGame"></activity>
+        <activity android:name=".StartGame" />
+        <activity android:name=".Friends"></activity>
     </application>
 
 </manifest>
